# -mud

./: AGENTS.md  CHANGELOG.md  Makefile  README.md  index.html  mud.py  pyproject.toml
.github/workflows/: ci.yml
commands/: admin.py  aliases.py  cmdset.py  default.py
core/: data_loader.py  logging.py  models.py  npc_ai.py  simple_yaml.py  state_update.py  textgen.py  time.py  timeline.py  world.py
data/: locations.yaml  npcs.yaml  timeline.yaml
docs/: AI_ONBOARDING_PROMPT.md  ARCHITECTURE.md  CONTENT_BACKLOG.md  DATA_SCHEMA.md  DECISION_LOG.md  HANDOFF.md  NARRATIVE_BRANCHING.md  QUEST_DESIGN.md  START_HERE.md  STORY_BIBLE.md  WORKFLOW.md  WORLD_DATA_SCHEMA.md  WRITING_STYLE.md
evennia_adapter/: __init__.py  state.py  tick_service.py
scripts/: ai_preflight.sh  simulate_world.mjs
src/: main.js  styles.css
src/content/: index.js
src/data/: ambientMusicProfiles.js  artPacks.js  characterModelProfiles.js  enemies.js  events.js  factions.js  items.js  map.js  martialArts.js  nodeScenes.js  npcInteractionProfiles.js  npcMartialLoadouts.js  npcs.js  sceneThemes.js
src/runtime/: characterModelRuntime.js  dialogueRuntime.js  npcInteractionRuntime.js  questRuntime.js  worldStateService.js
src/scenes/: gameScene.js
src/systems/: ambientAudio.js  battleActorFactory.js  combat.js  effectApplier.js  events.js  progression.js  save.js  saveMigrations.js  sceneAssetLoader.js  schedule.js  time.js  worldValidation.js
tests/: test_time_textgen_ai.py  test_timeline.py
text/: lexicon.yaml  style_guidelines.md
typeclasses/: characters.py  rooms.py
(+6 files in other folders)
